--- Auto-Git Commit ---

--- a/GCC/编译和链接那点事.md
+++ b/GCC/编译和链接那点事.md
@@ -559,9 +559,9 @@ libcalc.so: ELF 64-bit LSB shared object, x86-64, version 1 (SYSV), dynamically 
 
 说了这么多，该到了我们编程中需要注意的一个大问题了。即存在**同名符号**时链接器如何处理。不是刚刚说了会报告**重名错误**吗？怎么又要研究这个？很可惜，不仅仅这么简单。
 
-在**编译**时，**编译器**会向**汇编器**输出**每个全局符号**，分为**强**（`strong`）符号和**弱符号**（weak），汇编器把这个信息**隐含的编码**在**可重定位目标文件的符号表**里。其中
+在**编译**时，**编译器**会向**汇编器**输出**每个全局符号**，分为**强**（`strong`）符号和**弱符号**（`weak`），汇编器把这个信息**隐含的编码**在**可重定位目标文件的符号表**里。其中
 
-- **函数**和**已初始化过的全局变量**是**强符号**，
+- **函数！！！** 和**已初始化！！！过的全局变量！！！** 是**强符号**，
 - **未初始化**的**全局变量**是**弱符号**。
 
 根据强弱符号的定义，GNU链接器采用的规则如下：
