--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -445,7 +445,7 @@ struct loaded_vmcs {
 
 ![2019-12-18-16-51-15.png](./images/2019-12-18-16-51-15.png)
 
-一般L1中，loaded_vmcs就执行vmcs01，当VCPU运行的物理CPU发生切换的时候，修改loaded_vmcs中的cpu成员即可
+一般L1中，`loaded_vmcs`就指向`vmcs01`，当VCPU运行的**物理CPU发生切换**的时候，修改`loaded_vmcs`中的**cpu成员**即可
 
 ```cpp
 static struct kvm_vcpu *vmx_create_vcpu(struct kvm *kvm, unsigned int id)
