--- a/Virtualization/Tools/测试虚拟机构建.md
+++ b/Virtualization/Tools/测试虚拟机构建.md
@@ -1,5 +1,7 @@
 1. 通过`centos72.xml`创建虚拟机, 里面用了user模式网络, 虚拟机能访问外网和host, 但是从外面无法访问进来.
 
+最终通过`ps aux | grep qemu`查看类似`qemu_command.sh`内容
+
 2. 虚拟机里面使用`dhclient`来获取网络
 
 3. 虚拟机和host文件传输使用tftp.
