--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -151,6 +151,7 @@ static struct kmem_cache *mmu_page_header_cache;
 static struct percpu_counter kvm_total_used_mmu_pages;
 int kvm_mmu_module_init(void)
 {
+	kvm_mmu_reset_all_pte_masks();
 	// cache 初始化
 	pte_list_desc_cache = kmem_cache_create("pte_list_desc", ...)
 	// cache 初始化
