--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -20,7 +20,7 @@
         - [2.3.1.1. 设置全局vmcs_config和vmx_capability](#2311-设置全局vmcs_config和vmx_capability)
         - [2.3.1.2. 一堆检查](#2312-一堆检查)
         - [2.3.1.3. posted中断的wakeup处理函数设置](#2313-posted中断的wakeup处理函数设置)
-        - [2.3.1.4. 给每个cpu分配vmcs](#2314-给每个cpu分配vmcs)
+        - [2.3.1.4. percpu的VMXON region](#2314-percpu的vmxon-region)
     - [2.3.2. msr保存到全局变量msrs_to_save[]数组](#232-msr保存到全局变量msrs_to_save数组)
   - [2.4. 检查每个处理器对vmx的兼容性](#24-检查每个处理器对vmx的兼容性)
   - [2.5. 注册CPU状态变化的通知函数](#25-注册cpu状态变化的通知函数)
@@ -233,13 +233,13 @@ if (setup_vmcs_config(&vmcs_config, &vmx_capability) < 0)
 kvm_set_posted_intr_wakeup_handler(wakeup_handler);
 ```
 
-##### 2.3.1.4. 给每个cpu分配vmcs
+##### 2.3.1.4. percpu的VMXON region
 
 ```cpp
 alloc_kvm_area();
 ```
 
-给每个cpu分配vmcs
+给每个cpu分配vmcs, 这部分
 
 ### 2.3.2. msr保存到全局变量msrs_to_save[]数组
 
