--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机/1. KVM模块初始化.md
@@ -239,7 +239,22 @@ kvm_set_posted_intr_wakeup_handler(wakeup_handler);
 alloc_kvm_area();
 ```
 
-给每个cpu分配vmcs, 这部分
+给每个cpu分配struct vmcs, 用于VMXON region
+
+```cpp
+struct vmcs_hdr {
+        u32 revision_id:31;
+        u32 shadow_vmcs:1;
+};
+
+struct vmcs {
+        struct vmcs_hdr hdr;
+        u32 abort;
+        char data[0];
+};
+
+DECLARE_PER_CPU(struct vmcs *, current_vmcs);
+```
 
 ### 2.3.2. msr保存到全局变量msrs_to_save[]数组
 
