--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -287,7 +287,7 @@ static struct kvm *kvm_create_vm(unsigned long type)
 
 在 x86体系架构中，**KVM结构体**的**初始化**任务在**kvm\_arch\_init\_vm**函数(arch/x86/kvm/x86.c)中进行，进行了**分配内存**、**初始化设备列表**、设置**中断管理**和**初始化 tsc 的spin\_lock的功能**。
 
-在**完成之后**，将执行**硬件初始化**工作，该部分硬件初始化工作通过调用**on\_each\_cpu宏**，将在**每个物理CPU**上执行**同样的操作**。该操作主要是尝试将**所有的CPU**切换入**vitualize模式**，并且设置好**时钟**等信息，这个过程通过 **kvm\_arch\_hardware\_enable** 函数完成。
+在**完成之后**，将执行**硬件初始化**工作，该部分硬件初始化工作通过调用**on\_each\_cpu宏**，将在**每个物理CPU**上执行**同样的操作**。该操作主要是尝试将**所有的CPU**切换入**vitualize模式**(使用`vmxon`指令)，并且设置好**时钟**等信息，这个过程通过 **kvm\_arch\_hardware\_enable** 函数完成。
 
 该函数代码(arch/x86/kvm/x86.c)如下，主要执行了两个工作：
 
