--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -172,7 +172,8 @@ out:
                 hardware_enable_all() // 使能硬件，架构相关操作
                     hardware_enable_nolock
                         kvm_arch_hardware_enable()
-                            kvm_x86_ops->hardware_enable()
+                            kvm_shared_msr_
+                            kvm_x86_ops->hardware_enable()  // 会调用vmxon指令
                 kzalloc() // 分配memslots结构，并初始化为0
                 kvm_init_memslots_id() // 初始化内存槽位(slot)的id信息
                 kvm_eventfd_init() // 初始化事件通道
@@ -291,8 +292,9 @@ static struct kvm *kvm_create_vm(unsigned long type)
 
 该函数代码(arch/x86/kvm/x86.c)如下，主要执行了两个工作：
 
+- 处理kvm shared msr信息
 - **整理CPU的时钟信息**；
-- 调用kvm\_x86\_ops的**硬件相关**的函数进行具体操作。
+- 调用kvm\_x86\_ops的**硬件相关**的函数进行具体操作, 这其中调用了`vmxon`使每个cpu进入Virtualization模式.
 
 代码5\-8 kvm\_arch\_hardware\_enable函数代码
 
