--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机/2. QEMU初始化.md
@@ -71,6 +71,7 @@ int main()
  |   └─ kvm_init()                           // 【1】创建 KVM 虚拟机并获取对应的 fd
  |       ├─ kvm_ioctl(KVM_GET_API_VERSION)   // 检查 KVM API 版本
  |       ├─ kvm_ioctl(KVM_CREATE_VM)         // 创建虚拟机，并获取 vmfd
+ |       ├─ kvm_check_extension()            // 与kvm交互, 检查特性支持
  |       ├─ kvm_arch_init()
  |       └─ memory_listener_register(&kvm_memory_listener) // 注册 kvm_memory_listener
  |
