--- Auto-Git Commit ---

--- a/Virtualization/Learning/虚拟机创建流程/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/虚拟机创建流程/2. 虚拟机创建流程 - qemu篇.md
@@ -655,6 +655,8 @@ missing_cap = kvm_check_extension_list(s, kvm_required_capabilites);
 
 * 在kvm\_arch\_init中初始化硬件架构相关的一些特性，比如e820表，中断路由表等
 
+`target/i386/kvm.c`
+
 检查**kvm是否支持MSR**（model specific register，用于标识cpu的工作环境和工作状态），通常为**一组寄存器**，分别表示不同的标志位。其中**一些**要求**必须存在**，否则无法正常启动。
 
 ```cpp
