--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机/2. QEMU初始化.md
@@ -9,13 +9,13 @@
 - [pstack打印堆栈](#pstack打印堆栈)
 - [代码分析](#代码分析)
   - [atexit()注册QEMU退出处理函数](#atexit注册qemu退出处理函数)
-  - [module\_call\_init机制](#module_call_init机制)
+  - [module_call_init机制](#module_call_init机制)
     - [PC的注册](#pc的注册)
-    - [module\_init](#module_init)
-      - [type\_init](#type_init)
-      - [kvm\_init()](#kvm_init)
-  - [machine\_class](#machine_class)
-    - [current\_machine](#current_machine)
+    - [module_init](#module_init)
+      - [type_init](#type_init)
+      - [kvm_init()](#kvm_init)
+  - [machine_class](#machine_class)
+    - [current_machine](#current_machine)
   - [pc\_init1函数](#pc_init1函数)
     - [CPU初始化](#cpu初始化)
       - [vcpu线程](#vcpu线程)
@@ -373,7 +373,7 @@ int main(int argc, charchar **argv, charchar **envp)
 
 atexit(qemu\_run\_exit\_notifiers)注册了qemu的退出处理函数，后面再具体看qemu\_run\_exit\_notifiers函数。
 
-## module\_call\_init机制
+## module_call_init机制
 
 module\_call\_init则开始**初始化qemu的各个模块(！！！**)，陆陆续续的有**以下参数(！！！后续都会调用到并进行初始化**)：
 
@@ -467,7 +467,7 @@ void module_call_init(module_init_type type)
 
 **DEFINE\_PC\_MACHINE**注册的函数**pc\_init\_\#\#suffix**在**DEFINE\_I440FX\_MACHINE中定义**，怎么组合都无关，**pc\_init1(machine**)函数一定要执行，本质就是**pc\_init1赋值给了mc\-\>init**。
 
-### module\_init
+### module_init
 
 而**module\_init**的宏是
 
@@ -490,35 +490,35 @@ static void __attribute__((constructor)) do_qemu_init_ ## function(void) \
 
 它前面的**修饰是\_\_attribute\_\_((constructor**)),这个导致**machine\_init(！！！**)或者**type\_init(！！！**)等会在**main()之前就被执行(！！！**)。
 
-#### type\_init
+#### type_init
 
-[kvm\-all.c\]
+`kvm-all.c`
 
 所有**type\_init**(**kvm\_type\_init**）\-\> **kvm\_accel\_type** \-\> **kvm\_accel\_class\_init** \-\> **kvm\_init**依次完成了**函数注册**.
 
 所以说**module\_call\_init(MODULE\_INIT\_QOM**)函数**已经完成了kvm\_init的执行(！！！**)，所以这样就**清楚KVM调用关系**了。
 
-#### kvm\_init()
+#### kvm_init()
 
-如此就先去看**kvm\_init**函数，
+如此就先去看`kvm_init`函数，
 
-前面主要干了一件事，**填充KVMState \*s**结构体，
+前面主要干了一件事，填充`KVMState *s`结构体，
 
-然后通过**kvm\_ioctl**(s, KVM\_GET\_API\_VERSION, 0)判断**内核KVM**驱动和**当前QEMU版本**是否兼容，
+然后通过`kvm_ioctl(s, KVM_GET_API_VERSION, 0)`判断**内核KVM**驱动和**当前QEMU版本**是否兼容，
 
-下面则是执行*kvm\_ioctl*(s, **KVM\_CREATE\_VM**, type)进行**虚拟机的创建**活动，**创建了KVM虚拟机**，获取虚拟机句柄。具体KVM\_CREATE\_VM在内核态做了什么，ioctl的工作等另外再说.
+下面则是执行`kvm_ioctl(s, KVM_CREATE_VM, type)`进行**虚拟机的创建**活动，**创建了KVM虚拟机**，获取虚拟机句柄。具体KVM\_CREATE\_VM在内核态做了什么，ioctl的工作等另外再说.
 
-现在假定KVM\_CREATE\_VM所代表的虚拟机创建成功，下面通过**检查kvm\_check\_extension**结果填充KVMState，**kvm\_arch\_init初始化KVMState**，其中有IDENTITY\_MAP\_ADDR，TSS\_ADDR，NR\_MMU\_PAGES等，**cpu\_register\_phys\_memory\_client**注册qemu对**内存管理的函数集**
+现在假定`KVM_CREATE_VM`所代表的虚拟机创建成功，下面通过检查`kvm_check_extension`结果填充KVMState，**kvm\_arch\_init初始化KVMState**，其中有IDENTITY\_MAP\_ADDR，TSS\_ADDR，NR\_MMU\_PAGES等，**cpu\_register\_phys\_memory\_client**注册qemu对**内存管理的函数集**
 
 kvm\_create\_irqchip创建kvm**中断管理内容**，通过kvm\_vm\_ioctl(s, **KVM\_CREATE\_IRQCHIP**)实现，具体内核态的工作内容后面分析。
 
 到此kvm\_init的工作就完成了，最主要的工作就是创建的虚拟机。
- 
-## machine\_class
+
+## machine_class
 
 这样绕了这么大圈，重新回到vl.c上面来，前面刚说了**module\_call\_init(MODULE\_INIT\_MACHINE**)本质就是把**pc\_init1**赋值给了**mc\-\>init**，然后machine\_class = **find\_default\_machine**()，如此可以看到**machine\_class的init**函数一定会执行**pc\_init1(！！！**)。
 
-### current\_machine
+### current_machine
 
 下面涉及对OPT入参的解析过程略过不提。 qemu准备模拟的[机器的类型](http://oenhan.com/cgroup-src-1)从下面语句获得:
 
@@ -557,7 +557,7 @@ man qemu
 
 ### CPU初始化
 
-```c
+```cpp
 void pc_cpus_init(const charchar *cpu_model, DeviceState *icc_bridge)  
 {  
     int i;  
