--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机/2. QEMU初始化.md
@@ -471,8 +471,8 @@ void module_call_init(module_init_type type)
 
 而**module\_init**的宏是
 
-```c
-[include/qemu/module.h]
+```cpp
+// [include/qemu/module.h]
 #define module_init(function, type) \
 static void __attribute__((constructor)) do_qemu_init_ ## function(void) \
 { \
@@ -508,15 +508,15 @@ static void __attribute__((constructor)) do_qemu_init_ ## function(void) \
 
 下面则是执行`kvm_ioctl(s, KVM_CREATE_VM, type)`进行**虚拟机的创建**活动，**创建了KVM虚拟机**，获取虚拟机句柄。具体KVM\_CREATE\_VM在内核态做了什么，ioctl的工作等另外再说.
 
-现在假定`KVM_CREATE_VM`所代表的虚拟机创建成功，下面通过检查`kvm_check_extension`结果填充KVMState，**kvm\_arch\_init初始化KVMState**，其中有IDENTITY\_MAP\_ADDR，TSS\_ADDR，NR\_MMU\_PAGES等，**cpu\_register\_phys\_memory\_client**注册qemu对**内存管理的函数集**
+现在假定`KVM_CREATE_VM`所代表的虚拟机创建成功，下面通过检查`kvm_check_extension`结果填充KVMState，`kvm_arch_init`初始化`KVMState`，其中有`IDENTITY_MAP_ADDR`，`TSS_ADDR`，`NR_MMU_PAGES`等，`cpu_register_phys_memory_client`注册qemu对**内存管理的函数集**
 
-kvm\_create\_irqchip创建kvm**中断管理内容**，通过kvm\_vm\_ioctl(s, **KVM\_CREATE\_IRQCHIP**)实现，具体内核态的工作内容后面分析。
+`kvm_create_irqchip`创建kvm**中断管理内容**，通过`kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP)`实现，具体内核态的工作内容后面分析。
 
-到此kvm\_init的工作就完成了，最主要的工作就是创建的虚拟机。
+到此`kvm_init`的工作就完成了，最主要的工作就是创建的虚拟机。
 
 ## machine_class
 
-这样绕了这么大圈，重新回到vl.c上面来，前面刚说了**module\_call\_init(MODULE\_INIT\_MACHINE**)本质就是把**pc\_init1**赋值给了**mc\-\>init**，然后machine\_class = **find\_default\_machine**()，如此可以看到**machine\_class的init**函数一定会执行**pc\_init1(！！！**)。
+这样绕了这么大圈，重新回到vl.c上面来，前面刚说了`module_call_init(MODULE_INIT_MACHINE)`本质就是把`pc_init1`赋值给了`mc->init`，然后`machine_class = find_default_machine()`，如此可以看到`machine_class`的init函数一定会执行`pc_init1()`。
 
 ### current_machine
 
