--- Auto-Git Commit ---

--- a/Virtualization/Learning/虚拟机创建流程/2. 虚拟机创建流程 - qemu篇.md
+++ b/Virtualization/Learning/虚拟机创建流程/2. 虚拟机创建流程 - qemu篇.md
@@ -43,6 +43,7 @@
       - [3.20.1.7. 检查kvm中的qemu capability](#32017-检查kvm中的qemu-capability)
       - [3.20.1.8. 初始化硬件架构相关特性](#32018-初始化硬件架构相关特性)
       - [3.20.1.9. 创建中断管理单元](#32019-创建中断管理单元)
+      - [3.20.1.10. 注册 kvm_memory_listener](#320110-注册-kvm_memory_listener)
   - [3.21. 设置无硬盘启动相关参数](#321-设置无硬盘启动相关参数)
   - [3.22. 设置标准输出缓冲区](#322-设置标准输出缓冲区)
   - [3.23. 初始化vcpu相关的锁，信号量](#323-初始化vcpu相关的锁信号量)
@@ -676,6 +677,10 @@ kvm_vm_ioctl(s, KVM_CREATE_IRQCHIP);
 通过vmfd在kmod中创建一个虚拟pic
 
 初始化**中断路由表**(irqrouting 中断路由，与中断亲和性等相关。**kvm**通过该表可以知道将**某一个中断**路由到**哪一个具体的vcpu**上处理)
+
+#### 3.20.1.10. 注册 kvm_memory_listener
+
+
 
 ## 3.21. 设置无硬盘启动相关参数
 
