--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机/2. QEMU初始化.md
@@ -76,6 +76,7 @@ int main()
  |       ├─ kvm_ioctl(KVM_CREATE_VM)         // 创建虚拟机，并获取 vmfd
  |       ├─ kvm_check_extension()            // 与kvm交互, 检查特性支持
  |       ├─ kvm_arch_init()
+ |       ├─ kvm_irqchip_create()
  |       └─ memory_listener_register(&kvm_memory_listener) // 注册 kvm_memory_listener
  |
  ├─ qemu_init_cpu_loop()                     // 初始化 vCPU 线程竞争的锁
