--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机/2. QEMU初始化.md
@@ -3,11 +3,11 @@
 
 <!-- code_chunk_output -->
 
-- [概述](#概述)
+- [整体介绍](#整体介绍)
 - [Main()函数的关键点](#main函数的关键点)
   - [main()函数调用流程图](#main函数调用流程图)
-- [pstack打印堆栈](#pstack打印堆栈)
-- [代码分析](#代码分析)
+  - [pstack打印堆栈](#pstack打印堆栈)
+- [main()函数](#main函数)
   - [atexit()注册QEMU退出处理函数](#atexit注册qemu退出处理函数)
   - [module_call_init机制](#module_call_init机制)
     - [PC的注册](#pc的注册)
@@ -24,7 +24,7 @@
 
 <!-- /code_chunk_output -->
 
-# 概述
+# 整体介绍
 
 参见: `Virtualization/Learning/虚拟机创建流程/2. 虚拟机创建流程 - qemu篇.md`
 
@@ -208,7 +208,7 @@ int main()
 * 中间橙色部分即为根模式下的 Ring 0，即为内核空间中的 KVM，通过VM-Entry进入非根模式，运行 Guest OS，并处理VM-Exit。如果能在内核处理，则处理后再次通过VM-Entry进入 Guest OS；如果不能处理（例如 I/O 请求），则退出到用户空间，由 QEMU 进行处理
 * 右边紫色部分即为非根模式，Guest OS 运行在非根模式下的 Ring 0，所有的敏感指令都被重新定义，以便产生相应的 EXIT_REASON 交给 KVM 处理。Guest OS 中的进程则运行在非根模式下的 Ring 3
 
-# pstack打印堆栈
+## pstack打印堆栈
 
 通过virsh启动一台 32 核 CPU 的虚拟机，使用pstack打印堆栈验证一下：
 
@@ -257,11 +257,11 @@ Thread 1 (Thread 0x7fdd47cce700 (LWP 37247)):
 #2  0x0000000000536ef4 in main ()
 ```
 
-# 代码分析
+# main()函数
 
 Qemu层是从vl.c中的main()函数开始的，这里通过在代码中添加一些注释的方式来进行讲解。
 
-```c
+```cpp
 int main(int argc, charchar **argv, charchar **envp)  
 {  
     ......  
@@ -375,7 +375,7 @@ int main(int argc, charchar **argv, charchar **envp)
 
 ## atexit()注册QEMU退出处理函数
 
-atexit(qemu\_run\_exit\_notifiers)注册了qemu的退出处理函数，后面再具体看qemu\_run\_exit\_notifiers函数。
+`atexit(qemu_run_exit_notifiers)`注册了qemu的退出处理函数，后面再具体看`qemu_run_exit_notifiers`函数。
 
 ## module_call_init机制
 
