--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机/2. QEMU初始化.md
@@ -77,6 +77,9 @@ int main()
  |       ├─ kvm_check_extension()            // 与kvm交互, 检查特性支持
  |       ├─ kvm_arch_init()
  |       |   ├─ kvm_check_extension()        // 与kvm交互, 架构相关特性检查
+ |       |   ├─ kvm_vm_ioctl(s, KVM_SET_IDENTITY_MAP_ADDR, &identity_base);        // 与kvm交互, 架构相关特性检查
+ |       |   ├─ kvm_vm_ioctl(s, KVM_SET_TSS_ADDR, identity_base + 0x1000);        // 与kvm交互, 架构相关特性检查
+ |       |   ├─ e820_add_entry(identity_base, 0x4000, E820_RESERVED);        // 与kvm交互, 架构相关特性检查
  |       ├─ kvm_irqchip_create()             // 创建中断管理
  |       └─ memory_listener_register(&kvm_memory_listener) // 注册 kvm_memory_listener
  |
