--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -174,7 +174,8 @@ out:
                         kvm_arch_hardware_enable()
                             kvm_shared_msr_cpu_online()     // kvm shared msr
                             kvm_x86_ops->hardware_enable()  // 会调用vmxon指令
-                                kvm_x86_ops->hardware_enable()  // 会调用vmxon指令
+                                crash_enable_local_vmclear()  // 清理位图
+                                kvm_cpu_vmxon()  // vmxon指令
                             tsc初始化规则
                 kzalloc() // 分配memslots结构，并初始化为0
                 kvm_init_memslots_id() // 初始化内存槽位(slot)的id信息
