--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -44,6 +44,7 @@ struct kvm {
 	atomic_t online_vcpus;
 	int created_vcpus;
 	int last_boosted_vcpu;
+	// host上vm管理链表
 	struct list_head vm_list;
 	struct mutex lock;
 	struct kvm_io_bus *buses[KVM_NR_BUSES];
@@ -58,6 +59,7 @@ struct kvm {
 	struct list_head ioeventfds;
 #endif
 	struct kvm_vm_stat stat;
+	// host上arch的一些参数
 	struct kvm_arch arch;
 	// 引用计数
 	atomic_t users_count;
@@ -164,11 +166,12 @@ struct kvm_vcpu {
     unsigned long guest_debug;
 
     struct mutex mutex;
-    // 执行虚拟机对应的kvm_run结构
+    // 执行虚拟机对应的kvm_run结构, 运行时的状态
     struct kvm_run *run;
 
     int fpu_active;
     int guest_fpu_loaded, guest_xcr0_loaded;
+	// 队列
     wait_queue_head_t wq;
     struct pid *pid;
     int sigset_active;
@@ -207,6 +210,7 @@ struct kvm_vcpu {
     } spin_loop;
 #endif
     bool preempted;
+	// 当前VCPU虚拟的架构, 默认x86
     // 架构相关部分，包括的寄存器、apic、mmu相关等架构相关的内容
     struct kvm_vcpu_arch arch;
 };
