--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -352,15 +352,17 @@ static long kvm_vm_ioctl(struct file *filp,
 
 ## 6.1. 基本原理
 
-创建vCPU实际上就是**创建vCPU的描述符**，在KVM中，**vCPU对应的数据结构体**为**kvm\_vcpu**。因此，创建vCPU的描述符，简单来说就是**分配相应大小的内存**，并且进行相应的**初始化**工作。kvm\_vcpu中描述符包含的内容有很多，通常会包含各个**平台通用的内容**和**平台相关的内容**。
+创建vCPU实际上就是**创建vCPU的描述符**，在KVM中，**vCPU对应的数据结构体**为**kvm\_vcpu**。因此，创建vCPU的描述符，简单来说就是**分配相应大小的内存**，并且进行相应的**初始化**工作。
 
-在物理CPU上电之后，需要进一步初始化才可以使用。在这个过程中，硬件会自动将CPU初始化成特定的状态。
+kvm\_vcpu中描述符包含的内容有很多，通常会包含各个**平台通用的内容**和**平台相关的内容**。
+
+在**物理CPU上电**之后，需要进一步初始化才可以使用。在这个过程中，硬件会自动将CPU初始化成特定的状态。
 
 **kvm\_vcpu的初始化**也是一个类似的过程，将 **kvm\_vcpu 的各个数据结构体**设置成为可用的状态，通常需要包含如下内容。
 
 - 分配**vCPU标识**，设置cpu\_id属于哪个KVM虚拟机，并且分配对该vCPU的**唯一标识符**。
 - 初始化**虚拟寄存器组**, 在VT-x下, 这些信息包含在VMCS中
-- 初始化 kvm\_vcpu 的**状态信息**，标识白VCPU当前所处的状态(睡眠、运行等)，主要供调度器使用。
+- 初始化 kvm\_vcpu 的**状态信息**，标识该VCPU当前所处的状态(睡眠、运行等)，主要供调度器使用。
 - 寄存器/部件信息，主要指未包含在VMCS中的寄存器或CPU部件，比如：浮点寄存器和虚拟的LAPIC等。
 - 用户VMM进行优化或存储额外信息的字段，如：存放该VCPU私有数据的指针。
 
