--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/2. QEMU初始化.md
@@ -132,7 +132,7 @@ int main()
  |           |               └─ qemu_init_vcpu()
  |           |                   └─ qemu_kvm_start_vcpu()
  |           |                       └─ qemu_thread_create() // 顺序创建 vCPU 子线程，失败会阻塞
- |           |                           └─ qemu_kvm_cpu_thread_fn()
+ |           |                           └─ qemu_kvm_cpu_thread_fn()    // vCPU 线程的执行函数
  |           |                               ├─ kvm_init_vcpu()
  |           |                               |   ├─ kvm_ioctl(KVM_CREATE_VCPU) // 获取 vCPU 对应的 fd
  |           |                               |   └─ kvm_arch_init_vcpu()
