--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -354,7 +354,7 @@ static long kvm_vm_ioctl(struct file *filp,
 
 创建vCPU实际上就是**创建vCPU的描述符**，在KVM中，**vCPU对应的数据结构体**为**kvm\_vcpu**。因此，创建vCPU的描述符，简单来说就是**分配相应大小的内存**，并且进行相应的**初始化**工作。
 
-kvm\_vcpu中描述符包含的内容有很多，通常会包含各个**平台通用的内容**和**平台相关的内容**。
+**kvm\_vcpu**中描述符包含的内容有很多，通常会包含各个**平台通用的内容**和**平台相关的内容**。
 
 在**物理CPU上电**之后，需要进一步初始化才可以使用。在这个过程中，硬件会自动将CPU初始化成特定的状态。**kvm\_vcpu的初始化**也是一个**类似的过程**，将 **kvm\_vcpu 的各个数据结构体**设置成为可用的状态，通常需要包含如下内容。
 
