--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -361,12 +361,12 @@ static long kvm_vm_ioctl(struct file *filp,
 - 分配**vCPU标识**，设置`cpu_id`属于**哪个KVM虚拟机**，并且分配对该vCPU的**唯一标识符**。
 - 初始化**虚拟寄存器组**, 在`VT-x`下, 这些信息包含在**VMCS**中
 - 初始化 `kvm_vcpu` 的**状态信息**，标识该**VCPU**当前所处的**状态**(睡眠、运行等)，主要供**调度器使用**。
-- **寄存器/部件信息**，主要指**未包含在VMCS**中的**寄存器**或CPU部件，比如：**浮点寄存器**和**虚拟的LAPIC**等。
+- **寄存器/部件信息**，主要指**未包含在VMCS！！！** 中的**寄存器**或**CPU部件**，比如：**浮点寄存器！！！** 和 **虚拟的LAPIC！！！** 等。
 - 用户**VMM**进行优化或存储额外信息的字段，如：存放该**VCPU私有数据的指针**。
 
 接下来讲述KVM中**vCPU的创建过程**。
 
-在获得了**fd\_vm**之后，通过**ioctl**调用**KVM\_CREATE\_VCPU指令**，可以对该fd\_vm对应的虚拟机**创建vCPU**，其入口函数地址在**kvm\_vm\_ioctl**函数(virt/kvm/kvm\_main.c)中，通过switch之后，程序流程将选择进入**kvm\_vm\_ioctl\_create\_vcpu**函数中进行处理，其代码如下。
+在获得了**fd\_vm**之后，通过**ioctl**调用**KVM\_CREATE\_VCPU指令**，可以对该fd\_vm对应的虚拟机**创建vCPU**，其入口函数地址在**kvm\_vm\_ioctl**函数(virt/kvm/kvm\_main.c)中，通过`switch`之后，程序流程将选择进入**kvm\_vm\_ioctl\_create\_vcpu**函数中进行处理，其代码如下。
 
 ## 6.2. 基本流程
 
