--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -34,6 +34,8 @@
 
 # 1. KVM模块初始化流程
 
+详细见: `Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/1. KVM模块初始化.md`
+
 KVM模块分为三个主要模块：kvm.ko、kvm\-intel.ko和kvm\-amd.ko，这三个模块在初始化阶段的流程如图5\-4所示。
 ￼
 图5\-4 KVM模块初始化阶段:
@@ -375,7 +377,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
     kvm_vm_ioctl_create_vcpu() // 为虚拟机创建VCPU的ioctl调用的入口函数
         kvm_arch_vcpu_precreate() // stable tsc检查
         kmem_cache_zalloc(kvm_vcpu_cache, GFP_KERNEL); // 给kvm_vcpu分配内存, 该cache是kvm模块初始化时创建的
-        page = alloc_page(); // 分配一页内存给vcpu->run
+        page = alloc_page(); // 分配一页内存给vcpu->run(kvm_run)
         kvm_vcpu_init(vcpu, kvm, id); // vcpu结构体一些变量初始化
         kvm_arch_vcpu_create() // 创建vcpu结构，架构相关，对于intel x86来说，最终调用vmx_create_vcpu
         kvm_arch_vcpu_setup() // 设置VCPU结构
