--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/1. KVM模块初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/1. KVM模块初始化.md
@@ -77,7 +77,7 @@ vmx_init()                               // 初始化入口
  |   ├─ smp_call_function_single()       // 对每个online cpu进行兼容性检查
  |   ├─ cpuhp_setup_state_nocalls()      // 注册cpu状态变化的回调函数
  |   ├─ register_reboot_notifier()       // 注册reboot时候的通知函数
- |   ├─ kvm_cache_create_usercopy()      // 创建kmem cache, 为了对齐
+ |   ├─ kvm_cache_create_usercopy()      // 创建kvm_vcpu 的 kmem cache
  |   ├─ kvm_async_pf_init()              // 异步
  |   ├─ misc_register(&kvm_dev)          // 注册字符设备文件/dev/kvm 
  |   ├─ register_syscore_ops()           // 注册系统核心函数, 这里是suspend和resume
