--- Auto-Git Commit ---

--- a/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/1. KVM模块初始化.md
+++ b/Virtualization/KVM/2. 模块初始化以及创建虚拟机QEMU/1. KVM模块初始化.md
@@ -365,7 +365,7 @@ kvm_vcpu_cache =
                     NULL);
 ```
 
-后面会给创建vcpu时候使用, 该cache的arch部分可被拷贝到用户态使用.
+后面会给创建vcpu时候使用, 该cache的arch部分可被拷贝到用户态使用. 这里的`vcpu_size`是`sizeof(struct vcpu_vmx)`
 
 ## 2.8. 赋值file_operations的模块名
 
