--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -380,7 +380,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
         page = alloc_page(); // 分配一页内存给vcpu->run(kvm_run)
         kvm_vcpu_init(vcpu, kvm, id); // vcpu结构体一些变量初始化
         kvm_arch_vcpu_create() // 创建vcpu结构，架构相关，对于intel x86来说，最终调用vmx_create_vcpu
-            kvm_mmu_create() // 创建vcpu结构，架构相关，对于intel x86来说，最终调用vmx_create_vcpu
+            kvm_mmu_create() // 
         kvm_arch_vcpu_setup() // 设置VCPU结构
         create_vcpu_fd() // 为新创建的vcpu创建对应的fd，以便于后续通过该fd进行ioctl操作
         kvm_arch_vcpu_postcreate() // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
@@ -466,9 +466,9 @@ kvm_vcpu结构体见上节
 
 #### 6.3.1.1. kvm_arch_vcpu_create创建kvm_vcpu
 
-首先，在1371行，调用**kvm\_arch\_vcpu\_create**函数创建一个**kvm\_vcpu结构体！！！**。该创建内容**与架构相关**，因此，直接调用**kvm\_x86\_ops**中的create\_vcpu方法执行。
+首先，在1371行，调用**kvm\_arch\_vcpu\_create**函数创建一个**kvm\_vcpu结构体！！！**。该创建内容**与架构相关**，因此，直接调用**kvm\_x86\_ops**中的`create_vcpu`方法执行。
 
-(kvm\_arch\_vcpu\_create在arch/x86/kvm/x86.c中, 调用struct kvm\_x86\_ops vmx\_x86\_ops(定义在arch/x86/kvm/vmx.c)中的create\_vcpu(即vmx\_create\_vcpu, 在arch/x86/kvm/vmx.c中))
+(`kvm_arch_vcpu_create`在`arch/x86/kvm/x86.c`中, 调用`struct kvm\_x86\_ops vmx\_x86\_ops`(定义在arch/x86/kvm/vmx.c)中的`create\_vcpu`(即vmx\_create\_vcpu, 在arch/x86/kvm/vmx.c中))
 
 **每个vCPU**的创建先alloc一个struct **vcpu\_vmx**里面包含了msr, vmcs, vcpu等, 这里不是主要对kvm\_vcpu做初始化
 
@@ -478,7 +478,7 @@ kvm_vcpu结构体见上节
 - 接着**初始化MSR！！！** 和**VMCS！！！等寄存器**，(**每个VCPU都有**)
 - 最后完成**I/O**和**内存部分寄存器的初始化**，为被**初次调度运行**做好准备。
 
-kvm_vm_ioctl() --> kvm_vm_ioctl_create_vcpu() -->kvm_arch_vcpu_create()--> kvm_x86_ops->vcpu_create() --> vmx_create_vcpu():
+`kvm_vm_ioctl()` --> `kvm_vm_ioctl_create_vcpu()` -->`kvm_arch_vcpu_create()`--> `kvm_x86_ops->vcpu_create()` --> `vmx_create_vcpu()`:
 
 ```cpp
 /*
