--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -380,7 +380,10 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
         page = alloc_page(); // 分配一页内存给vcpu->run(kvm_run)
         kvm_vcpu_init(vcpu, kvm, id); // vcpu结构体一些变量初始化
         kvm_arch_vcpu_create() // 创建vcpu结构，架构相关，对于intel x86来说，最终调用vmx_create_vcpu
-            kvm_mmu_create() // 
+            kvm_mmu_create() // vcpu->arch中mmu相关初始化
+                alloc_mmu_pages() // 给vcpu->arch的
+        kvm_create_vcpu_debugfs() //
+        kvm_get_kvm() // 
         kvm_arch_vcpu_setup() // 设置VCPU结构
         create_vcpu_fd() // 为新创建的vcpu创建对应的fd，以便于后续通过该fd进行ioctl操作
         kvm_arch_vcpu_postcreate() // 架构相关的善后工作，比如再次调用vcpu_load，以及tsc相关处理
