--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -388,8 +388,11 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
             vcpu->arch.user_fpu = kmem_cache_zalloc(); //给用户态fpu分配kmem cache
             vcpu->arch.guest_fpu = kmem_cache_zalloc(); // 
             kvm_x86_ops->vcpu_create(vcpu); 
-            kvm_vcpu_mtrr_init(vcpu);
+            kvm_vcpu_mtrr_init(vcpu); // 初始化mtrr链表 
             vcpu_load(vcpu);
+                vmx_vcpu_load_vmcs();
+                vmx_vcpu_pi_load();
+                
             kvm_vcpu_reset(vcpu, false);
             kvm_init_mmu(vcpu, false);
             vcpu_put(vcpu);
