--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -379,7 +379,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
         kmem_cache_zalloc(kvm_vcpu_cache, GFP_KERNEL); // 给kvm_vcpu分配内存, 该cache是kvm模块初始化时创建的
         page = alloc_page(); // 分配一页内存给vcpu->run(kvm_run)
         kvm_vcpu_init(vcpu, kvm, id); // vcpu结构体一些变量初始化
-        kvm_arch_vcpu_create() // 初始化架构相关，对于intel x86来说，最终调用vmx_create_vcpu
+        kvm_arch_vcpu_create() // 初始化kvm_vcpu_arch结构体, 架构相关
             kvm_mmu_create() // vcpu->arch中mmu相关初始化
                 alloc_mmu_pages() // 给vcpu->arch的gust mmu和root mmu分配页面
             kvm_create_lapic() //
@@ -387,7 +387,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
             vcpu->arch.mce_banks = kzalloc();
             vcpu->arch.user_fpu = kmem_cache_zalloc(); //给用户态fpu分配kmem cache
             vcpu->arch.guest_fpu = kmem_cache_zalloc(); // 
-            kvm_x86_ops->vcpu_create(vcpu); 
+            kvm_x86_ops->vcpu_create(vcpu); //对于intel x86来说，最终调用vmx_create_vcpu
             kvm_vcpu_mtrr_init(vcpu); // 初始化mtrr链表 
             vcpu_load(vcpu);
                 vmx_vcpu_load_vmcs();
