--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/4. KVM内核模块重要的数据结构.md
@@ -585,6 +585,7 @@ struct kvm_vcpu_arch {
     /* set at EPT violation at this point */
     unsigned long exit_qualification;
  
+    // 不支持VMX下的模拟虚拟化
     /* pv related host specific info */
     struct {
         bool pv_unhalted;
