--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -380,6 +380,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
         page = alloc_page(); // 分配一页内存给vcpu->run(kvm_run)
         kvm_vcpu_init(vcpu, kvm, id); // vcpu结构体一些变量初始化
         kvm_arch_vcpu_create() // 初始化kvm_vcpu_arch结构体, 架构相关
+            vcpu->arch.emulate_ctxt.ops = &emulate_ops; // 没有VMX时的软件模拟, 没人用...
             kvm_mmu_create() // vcpu->arch中mmu相关初始化
                 alloc_mmu_pages() // 给vcpu->arch的gust mmu和root mmu分配页面
             kvm_create_lapic() //
