--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -385,7 +385,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
             kvm_mmu_create() // kvm_vcpu_arch中mmu相关初始化, 内存虚拟化, 地址转换的重点
             kvm_create_lapic() // 初始化lapic
             alloc_page(); // 给kvm_vcpu_arch的pio分配内存页
-            vcpu->arch.mce_banks = kzalloc(); // 初始化mce_banks
+            vcpu->arch.mce_banks = kzalloc(); // 以及其他一些代码实现初始化mce_banks
             vcpu->arch.user_fpu = kmem_cache_zalloc(); //给用户态fpu分配kmem cache
             vcpu->arch.guest_fpu = kmem_cache_zalloc(); // 
             kvm_x86_ops->vcpu_create(vcpu); //对于intel x86来说，最终调用vmx_create_vcpu
