--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -387,10 +387,10 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
             alloc_page(); // 给kvm_vcpu_arch的pio分配内存页
             vcpu->arch.mce_banks = kzalloc(); // 以及其他一些代码实现初始化mce_banks
             vcpu->arch.user_fpu = kmem_cache_zalloc(); //给用户态fpu分配kmem cache
-            vcpu->arch.guest_fpu = kmem_cache_zalloc(); // 
+            vcpu->arch.guest_fpu = kmem_cache_zalloc(); // 虚拟机fpu的kmem cache
             kvm_x86_ops->vcpu_create(vcpu); //对于intel x86来说，最终调用vmx_create_vcpu
             kvm_vcpu_mtrr_init(vcpu); // 初始化mtrr链表 
-            vcpu_load(vcpu);  // 实际调用vmx.c的vmx_vcpu_load()
+            vcpu_load(vcpu);  // struct vmx_vcpu(vcpu的一个运行环境)初始化, 实际调用vmx.c的vmx_vcpu_load()
                 vmx_vcpu_load_vmcs();
                 vmx_vcpu_pi_load();
                 
