--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -393,7 +393,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
             vcpu_load(vcpu);  // struct vmx_vcpu(vcpu的一个运行环境)加载, 实际调用vmx.c的vmx_vcpu_load()
                 vmx_vcpu_load_vmcs();
                     already_loaded = vmx->loaded_vmcs->cpu == cpu; // 是否已经加载的判断
-                    
+                    loaded_vmcs_clear
                 vmx_vcpu_pi_load();
                 
             kvm_vcpu_reset(vcpu, false);
