--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -395,7 +395,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                     kvm_x86_ops->vcpu_load(vcpu, cpu); // 实际调用vmx.c的vmx_vcpu_load()
                         vmx_vcpu_load_vmcs();
                             already_loaded = vmx->loaded_vmcs->cpu == cpu; // 是否已经加载的判断
-                            loaded_vmcs_clear(vmx->loaded_vmcs); // 会调用vmclear命令, 地址即vmx->loaded_vmcs地址
+                            loaded_vmcs_clear(vmx->loaded_vmcs); // 会调用vmclear命令(操作数为struct vmcs地址), 用于对该VMCS区域初始化, 包括将数据填充到VMCS区域
                         vmx_vcpu_pi_load();
                 put_cpu()
                 
