--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -396,7 +396,9 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                         vmx_vcpu_load_vmcs();
                             already_loaded = vmx->loaded_vmcs->cpu == cpu; // 是否已经加载的判断
                             loaded_vmcs_clear(vmx->loaded_vmcs); // 会调用vmclear命令(操作数为struct vmcs地址), 用于对该VMCS区域初始化, 包括将数据填充到VMCS区域和将VMCS状态(不可见字段)置为clear
-                            list_add(&vmx->loaded_vmcs->loaded_vmcss_on_cpu_link, &per_cpu(loaded_vmcss_on_cpu, cpu)); //
+                            list_add(&vmx->loaded_vmcs->loaded_vmcss_on_cpu_link, &per_cpu(loaded_vmcss_on_cpu, cpu)); // 相应cpu上的loaded_vmcs链表
+                            per_cpu(current_vmcs, cpu) = vmx->loaded_vmcs->vmcs; // 赋值cpu的current_vmcs
+                            vmcs_load(vmx->loaded_vmcs->vmcs);
                         vmx_vcpu_pi_load();
                 put_cpu()
                 
