--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/1. VMCS状态.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/1. VMCS状态.md
@@ -3,19 +3,23 @@
 
 <!-- code_chunk_output -->
 
-* [0 概述](#0-概述)
+- [概述](#概述)
 
 <!-- /code_chunk_output -->
 
-# 0 概述
+# 概述
 
-在一个存在**多个虚拟机**的平台里, **每个虚拟处理器**对应一个**属于自己的VMCS**. 在**虚拟处理器之间的切换**也意味着**VMCS之间的切换**. **同一个时刻**, **一个逻辑处理器**只有**一个VMCS是current\-VMCS(！！！**).
+在一个存在**多个虚拟机**的平台里, **每个虚拟处理器**对应一个**属于自己的VMCS**. 
+
+在**虚拟处理器之间的切换**也意味着**VMCS之间的切换**. 
+
+**同一个时刻**, **一个逻辑处理器**只有**一个VMCS是current\-VMCS(！！！**).
 
 根据Intel手册的描述, 可以归纳出用来描述**VMCS的三类属性状态**, 他们是:
 
-(1) activity属性, 包括active(活跃的)及inactive(非活跃的)状态
+(1) activity属性, 包括active及inactive状态
 
-(2) current属性, 包括current(当前的)及not current(非当前)状态
+(2) current属性, 包括current及not current(非当前)状态
 
-(3) launch属性, 包括clear(干净的)及launched(已启动的)状态.
+(3) launch属性, 包括clear及launched(已启动的)状态.
 
