--- Auto-Git Commit ---

--- a/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/1. VMCS状态.md
+++ b/Virtualization/Learning/处理器虚拟化技术/第3章 VMCS结构/1. VMCS状态.md
@@ -36,7 +36,7 @@
 
 # current属性
 
-
+一个逻辑处理器中, 一个时刻只能有一个VMCS处于"current"状态. 这样的 VMCS 称为 `current-VMCS`, 指向它的指针称为 `current-VMCS pointer.` 处理器会**自动记录和维护！！！** `current-VMCS pointer` 值.
 
 # 小结
 
