--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -401,9 +401,8 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                             vmcs_load(vmx->loaded_vmcs->vmcs); // vmptrld指令, 加载这个vmcs为current-VMCS
                             vmcs_writel(HOST_TR_BASE, (unsigned long)&get_cpu_entry_area(cpu)->tss.x86_tss); // 写VMCS的TSS
                             vmcs_writel(HOST_GDTR_BASE, (unsigned long)gdt);   // 写GDT
-                            vmx->loaded_vmcs->cpu = cpu; // 
-                        vmx_vcpu_pi_load();
-                put_cpu()
+                            vmx->loaded_vmcs->cpu = cpu; // 关联CPU
+                        vmx_vcpu_pi_load(); // 加载posted interrupt
                 
                 
             kvm_vcpu_reset(vcpu, false);
