--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -389,6 +389,8 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
             vcpu->arch.user_fpu = kmem_cache_zalloc(); //给用户态fpu分配kmem cache
             vcpu->arch.guest_fpu = kmem_cache_zalloc(); // 虚拟机fpu的kmem cache
             kvm_x86_ops->vcpu_create(vcpu); //对于intel x86来说，最终调用vmx_create_vcpu
+                vmx->vpid = allocate_vpid(); // 分配vpid
+                vmx->pml_pg = alloc_page(); // 
             kvm_vcpu_mtrr_init(vcpu); // 初始化mtrr链表 
             vcpu_load(vcpu);  // 加载vcpu信息<参数为kvm_vcpu>, struct vmx_vcpu(vcpu的一个运行环境)加载, 
                 kvm_arch_vcpu_load(vcpu, cpu)
