--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -392,7 +392,9 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                 vmx->vpid = allocate_vpid(); // 分配vpid
                 vmx->pml_pg = alloc_page(); // 
                 alloc_loaded_vmcs(&vmx->vmc01); // 初始化loaded_vmcs
-                    vmx->loaded_vmcs->vmcs = alloc_vmcs();
+                    loaded_vmcs->vmcs = alloc_vmcs(); // 分配页面
+                    loaded_vmcs_init(loaded_vmcs); // 初始化 loaded_vmcs
+                        vmcs_clear(loaded_vmcs->vmcs); // 调用vmclear 
             kvm_vcpu_mtrr_init(vcpu); // 初始化mtrr链表 
             vcpu_load(vcpu);  // 加载vcpu信息<参数为kvm_vcpu>, struct vmx_vcpu(vcpu的一个运行环境)加载, 
                 kvm_arch_vcpu_load(vcpu, cpu)
