--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -391,7 +391,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
             kvm_x86_ops->vcpu_create(vcpu); //对于intel x86来说，最终调用vmx_create_vcpu
                 vmx->vpid = allocate_vpid(); // 分配vpid
                 vmx->pml_pg = alloc_page(); // 
-                alloc_loaded_vmcs(&vmx->vmc01); // 初始化loaded_vmcs
+                alloc_loaded_vmcs(&vmx->vmc01); // loaded_vmcs的分配
                     loaded_vmcs->vmcs = alloc_vmcs(); // 分配页面
                     loaded_vmcs_init(loaded_vmcs); // 初始化 loaded_vmcs
                         vmcs_clear(loaded_vmcs->vmcs); // 调用vmclear 
