--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -405,13 +405,13 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                     kvm_x86_ops->vcpu_load(vcpu, cpu); // 实际调用vmx.c的vmx_vcpu_load()
                         vmx_vcpu_load_vmcs(); // 加载vmcs
                             already_loaded = vmx->loaded_vmcs->cpu == cpu; // 是否已经加载的判断
-                            loaded_vmcs_clear(vmx->loaded_vmcs); // 会调用vmclear命令(操作数为struct vmcs地址), 用于对该VMCS区域初始化, 包括将数据填充到VMCS区域和将VMCS状态(不可见字段)置为clear
-                            list_add(&vmx->loaded_vmcs->loaded_vmcss_on_cpu_link, &per_cpu(loaded_vmcss_on_cpu, cpu)); // 相应cpu上的loaded_vmcs链表
+                                loaded_vmcs_clear(vmx->loaded_vmcs); // 没有加载时, 会调用vmclear命令(操作数为struct vmcs地址), 用于对该VMCS区域初始化, 包括将数据填充到VMCS区域和将VMCS状态(不可见字段)置为clear
+                                list_add(&vmx->loaded_vmcs->loaded_vmcss_on_cpu_link, &per_cpu(loaded_vmcss_on_cpu, cpu)); // 没有加载时, 相应cpu上的loaded_vmcs链表
                             per_cpu(current_vmcs, cpu) = vmx->loaded_vmcs->vmcs; // 赋值cpu的current_vmcs
                             vmcs_load(vmx->loaded_vmcs->vmcs); // vmptrld指令, 加载这个vmcs为current-VMCS
-                            vmcs_writel(HOST_TR_BASE, (unsigned long)&get_cpu_entry_area(cpu)->tss.x86_tss); // 写VMCS的TSS
-                            vmcs_writel(HOST_GDTR_BASE, (unsigned long)gdt);   // 写GDT
-                            vmx->loaded_vmcs->cpu = cpu; // 关联CPU
+                                vmcs_writel(HOST_TR_BASE, (unsigned long)&get_cpu_entry_area(cpu)->tss.x86_tss); // 写VMCS的TSS
+                                vmcs_writel(HOST_GDTR_BASE, (unsigned long)gdt);   // 写GDT
+                                vmx->loaded_vmcs->cpu = cpu; // 关联CPU
                         vmx_vcpu_pi_load(); // 加载posted interrupt
                 
                 
