--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -409,9 +409,11 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                                 list_add(&vmx->loaded_vmcs->loaded_vmcss_on_cpu_link, &per_cpu(loaded_vmcss_on_cpu, cpu)); // 没有加载时, 相应cpu上的loaded_vmcs链表
                             per_cpu(current_vmcs, cpu) = vmx->loaded_vmcs->vmcs; // 赋值cpu的current_vmcs
                             vmcs_load(vmx->loaded_vmcs->vmcs); // vmptrld指令, 加载这个vmcs为current-VMCS
-                                vmcs_writel(HOST_TR_BASE, (unsigned long)&get_cpu_entry_area(cpu)->tss.x86_tss); // 写VMCS的TSS
-                                vmcs_writel(HOST_GDTR_BASE, (unsigned long)gdt);   // 写GDT
-                                vmx->loaded_vmcs->cpu = cpu; // 关联CPU
+                                kvm_make_request(KVM_REQ_TLB_FLUSH, vcpu); // 
+                                vmcs_writel(HOST_TR_BASE, (unsigned long)&get_cpu_entry_area(cpu)->tss.x86_tss); // 没加载时, 写VMCS的TSS
+                                vmcs_writel(HOST_GDTR_BASE, (unsigned long)gdt);   // 没加载时, 写GDT
+                                vmx->loaded_vmcs->cpu = cpu; // 没加载时, 关联CPU
+                            decache_tsc_multiplier(); 
                         vmx_vcpu_pi_load(); // 加载posted interrupt
                 
                 
