--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -398,7 +398,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                     loaded_vmcs->vmcs = alloc_vmcs(); // 分配页面
                     loaded_vmcs_init(loaded_vmcs); // 初始化 loaded_vmcs
                         vmcs_clear(loaded_vmcs->vmcs); // 调用vmclear 
-                    loaded_vmcs->msr_bitmap = (unsigned long *)__get_free_page(GFP_KERNEL_ACCOUNT); // 分配页面
+                    loaded_vmcs->msr_bitmap = (unsigned long *)__get_free_page(GFP_KERNEL_ACCOUNT); // msr_bitmap 分配页面
                 vmx_disable_intercept_for_msr();
                 vmx_vcpu_load();
                     vmx_vcpu_load_vmcs(); // 加载vmcs
@@ -413,6 +413,11 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                             vmx->loaded_vmcs->cpu = cpu; // 没加载时, 关联CPU
                         decache_tsc_multiplier(); 
                     vmx_vcpu_pi_load(); // 加载posted interrupt
+                init_vmcs(vmx); // vmcs的guest-state在vmx_vcpu_reset()
+                    vmcs_write64(MSR_BITMAP, __pa(vmx->vmcs01.msr_bitmap));
+                    vmcs_write64(VMCS_LINK_POINTER, -1ull);
+                    pin_controls_set(vmx, vmx_pin_based_exec_ctrl(vmx));
+                    exec_controls_set(vmx, vmx_exec_control(vmx));
             kvm_vcpu_mtrr_init(vcpu); // 初始化mtrr链表 
             vcpu_load(vcpu);  // 加载vcpu信息<参数为kvm_vcpu>, struct vmx_vcpu(vcpu的一个运行环境)加载, 
                 kvm_arch_vcpu_load(vcpu, cpu)
@@ -431,7 +436,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                         vmx_vcpu_pi_load(); // 加载posted interrupt
                 
                 
-            kvm_vcpu_reset(vcpu, false);
+            kvm_vcpu_reset(vcpu, false); // 
             kvm_init_mmu(vcpu, false);
             vcpu_put(vcpu);
         kvm_create_vcpu_debugfs() //
