--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第3篇 KVM虚拟化技术/第5章 qemu-kvm虚拟化解决方案/5. KVM内核模块重要流程的分析.md
@@ -414,10 +414,7 @@ kvm_vm_ioctl() // kvm ioctl vm指令入口
                         decache_tsc_multiplier(); 
                     vmx_vcpu_pi_load(); // 加载posted interrupt
                 init_vmcs(vmx); // vmcs的guest-state在vmx_vcpu_reset()
-                    vmcs_write64(MSR_BITMAP, __pa(vmx->vmcs01.msr_bitmap));
-                    vmcs_write64(VMCS_LINK_POINTER, -1ull);
-                    pin_controls_set(vmx, vmx_pin_based_exec_ctrl(vmx));
-                    exec_controls_set(vmx, vmx_exec_control(vmx));
+                    vmcs_write64(); // 一堆写入vmcs, 使用vmwrite指令
             kvm_vcpu_mtrr_init(vcpu); // 初始化mtrr链表 
             vcpu_load(vcpu);  // 加载vcpu信息<参数为kvm_vcpu>, struct vmx_vcpu(vcpu的一个运行环境)加载, 
                 kvm_arch_vcpu_load(vcpu, cpu)
